--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
 <div class="logo">
-<a href="{{ .Site.Home.RelPermalink }}">
+<a href="https://eens.netlify.app">
 <img src="/images/logo.svg" alt="Extra Ecclesia Nulla Salus">
 </a>
 
