--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -21,8 +21,19 @@
 {{ .Name }}
 </a>
 </li>
-
 {{ end }}
+
+<li>
+<div class="dropdown">
+   <button class="dropdown-toggle" onclick="toggleDropdown()">Select Language</button>
+   <div class="dropdown-menu" id="languageDropdown">
+   <a class="dropdown-item" href="#">JavaScript</a>
+   <a class="dropdown-item" href="#">Python</a>
+   <a class="dropdown-item" href="#">Java</a>
+   <a class="dropdown-item" href="#">C++</a>
+   </div>
+</div>
+</li>
 </ul>
 
 </nav>
