--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -25,7 +25,7 @@
 
 <li>
 <div class="dropdown">
-   <button class="dropdown-toggle" onclick="toggleDropdown()">Select Language</button>
+   <button class="dropdown-toggle" onclick="toggleDropdown()"><i class="fas fa-globe"></i></button>
    <div class="dropdown-menu" id="languageDropdown">
    <a class="dropdown-item" href="#">JavaScript</a>
    <a class="dropdown-item" href="#">Python</a>
