--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -24,12 +24,13 @@
 {{ end }}
 
 <li>
+
 <div class="dropdown">
-    <button class="dropdown-toggle" id="currentLanguage" onclick="toggleDropdown()">Select Language</button>
+    <button class="dropdown-toggle" id="currentLanguage" onclick="toggleDropdown()"></button>
     <div class="dropdown-menu" id="languageDropdown">
-        <a class="dropdown-item" href="#" onclick="selectLanguage('English')">English</a>
-        <a class="dropdown-item" href="#" onclick="selectLanguage('French')">French</a>
-        <a class="dropdown-item" href="#" onclick="selectLanguage('Italian')">Italian</a>
+        <a class="dropdown-item" href="#" data-lang="en">English</a>
+        <a class="dropdown-item" href="#" data-lang="fr">Français</a>
+        <a class="dropdown-item" href="#" data-lang="it">Italiano</a>
     </div>
 </div>
 </li>
