--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -29,9 +29,9 @@
 <div class="dropdown">
     <button class="dropdown-toggle" id="currentLanguage" onclick="toggleDropdown()"></button>
     <div class="dropdown-menu" id="languageDropdown">
-        <a class="dropdown-item" href="#" data-lang="en">English</a>
-        <a class="dropdown-item" href="#" data-lang="fr">Français</a>
-        <a class="dropdown-item" href="#" data-lang="it">Italiano</a>
+        <a class="dropdown-item" href="https://eens-en.netlify.app" data-lang="en">English</a>
+        <a class="dropdown-item" href="https://eens-it.netlify.app" data-lang="it">Italiano</a>
+        <a class="dropdown-item" href="https://eens-fr.netlify.app" data-lang="fr">Français</a>
     </div>
 </div>
 </li>
