--- a/assets/css/lang.css
+++ b/assets/css/lang.css
@@ -3,14 +3,15 @@
             position: relative;
             display: inline-block;
         }
+.dropdown button {
+padding: 0px;
+}
 
         .dropdown-toggle {
             background-color: #1e1e1e;
             color: #ffffff;
             border: none;
-            padding: 10px 20px;
             cursor: pointer;
-            border-radius: 5px;
             display: flex;
             align-items: center;
         }
