--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -24,14 +24,11 @@
 {{ end }}
 
 <li>
-<div class="dropdown">
-    <button class="dropdown-toggle" id="currentLanguage" onclick="toggleDropdown()"></button>
-    <div class="dropdown-menu" id="languageDropdown">
-        <a class="dropdown-item" href="#" data-lang="en">English</a>
-        <a class="dropdown-item" href="#" data-lang="fr">Français</a>
-        <a class="dropdown-item" href="#" data-lang="it">Italiano</a>
-    </div>
-</div>
+<select>
+<option value="english">English</option>
+<option value="francais">Français</option>
+<option value="italiano">Italiano</option>
+</select>
 </li>
 </ul>
 
