--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -25,6 +25,7 @@
 
 <li>
 <select>
+<option valus=""><i class="fas fa-globe"></i></option>
 <option value="english">English</option>
 <option value="francais">Français</option>
 <option value="italiano">Italiano</option>
