--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -25,10 +25,10 @@
 
 <li>
 <select>
-<option valus=""><i class="fas fa-globe"></i></option>
-<option value="english">English</option>
-<option value="francais">Français</option>
-<option value="italiano">Italiano</option>
+<option value=""><i class="fas fa-globe"></i></option>
+<option value="https://eens-en.netlify.app">English</option>
+<option value="https://eens-fr.netlify.app">Français</option>
+<option value="https://eens-it.netlify.app">Italiano</option>
 </select>
 </li>
 </ul>
