--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -22,17 +22,25 @@
 </a>
 </li>
 {{ end }}
-
-<li>
-
-<select id="redirectSelect" onchange="if (this.value) window.location.href=this.value;">
-<option value=""><i class="fas fa-globe"></i></option>
-<option value="https://eens-en.netlify.app">English</option>
-<option value="https://eens-fr.netlify.app">Français</option>
-<option value="https://eens-it.netlify.app">Italiano</option>
-</select>
-</li>
 </ul>
+
+  <ul>
+    {{ $currentPage := . }}
+    {{ range .Site.Menus.main }}
+      {{ if .HasChildren }}
+        <li class="dropdown">
+          <a href="#">{{ .Name }}</a>
+          <ul class="dropdown-menu">
+            {{ range .Children }}
+              <li><a href="{{ .URL }}">{{ .Name }}</a></li>
+            {{ end }}
+          </ul>
+        </li>
+      {{ else }}
+        <li><a href="{{ .URL }}">{{ .Name }}</a></li>
+      {{ end }}
+    {{ end }}
+  </ul>
 
 </nav>
 
