--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -36,7 +36,8 @@
   top: 100%;
   left: 0;
   background-color: #333;
-  padding: 5px 20px 5px 0px;
+  padding: 0px 0px 0px 0px;
+  margin: 10px 0px 0px 0px;
   list-style: none;
   z-index: 1000;
 }
@@ -51,7 +52,7 @@
   text-decoration: none;
   display: block;
    margin: 0px;
-  padding-left: 20px;
+  padding: 0px;
 }
 
 
