--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -36,8 +36,8 @@
   top: 100%;
   left: 0;
   background-color: #333;
-  padding: 10px 0px 0px 20px;
-  margin: 0px 0px 0px 0px;
+  padding: 10px;
+  margin: 0px;
   list-style: none;
   z-index: 1000;
 }
