--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -35,7 +35,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: #333;
+  background-color: black;
   padding: 10px;
   margin: 0px;
   list-style: none;
