--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -35,7 +35,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: black;
+  background-color: rgb(20,20,20);
   padding: 10px;
   margin: 0px;
   list-style: none;
