--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -83,7 +83,7 @@
     top: 60px;
     left: 0;
     width: 100%;
-    background-color: #333;
+    background-color: rgb(20,20,20);
     padding: 1rem;
   }
   .nav-links li {
