--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -36,7 +36,7 @@
   top: 100%;
   left: 0;
   background-color: rgb(20,20,20);
-  padding: 10px;
+  padding: 10px 10px 20px 10px;
   margin: 0px;
   list-style: none;
   z-index: 1000;
