--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -36,7 +36,7 @@
   top: 100%;
   left: 0;
   background-color: rgb(20,20,20);
-  padding: 10px 10px 20px 10px;
+  padding: 10px 0px 10px 20px;
   margin: 0px;
   list-style: none;
   z-index: 1000;
@@ -84,7 +84,7 @@
     left: 0;
     width: 100%;
     background-color: rgb(20,20,20);
-    padding: 1rem;
+    padding: 0px;
   }
   .nav-links li {
     padding-bottom: 10px;
@@ -101,7 +101,6 @@
   .dropdown-menu {
     position: static;
     display: none;
-    width: 100%;
   }
 
   .dropdown:hover .dropdown-menu {
