--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -84,7 +84,7 @@
     left: 0;
     width: 100%;
     background-color: rgb(40,40,40);
-    padding: 0px;
+    padding: 30px 0px 0px 0px;
   }
    .dropdown-menu {
 
