--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -12,31 +12,21 @@
   </div>
 
   <ul class="nav-links">
-    {{ $currentPage := . }}
-    {{ range .Site.Menus.main }}
-      {{ if not .HasChildren }} <!-- If there are no submenus -->
-        <li>
-          <a href="{{ .URL }}" class="{{ if eq $currentPage.RelPermalink .URL }}active{{ end }}">
-            {{ with .Pre }}{{ . | safeHTML }}{{ end }}
-            {{ .Name }}
-          </a>
-        </li>
-      {{ else }} <!-- If there are submenus -->
-        <li class="dropdown">
-          <a href="{{ .URL }}" class="{{ if eq $currentPage.RelPermalink .URL }}active{{ end }}">
-            {{ .Name }}
-          </a>
-          <ul class="dropdown-menu">
-            {{ range .Children }}
-              <li>
-                <a href="{{ .URL }}" class="{{ if eq $currentPage.RelPermalink .URL }}active{{ end }}">
-                  {{ .Name }}
-                </a>
-              </li>
-            {{ end }}
-          </ul>
-        </li>
+
+  {{ range .Site.Menus.main }}
+    <li>
+      <a href="{{ .URL }}" title="{{ .Name }}">
+        {{ if .Pre }}{{ .Pre | safeHTML }}{{ end }}
+        {{ .Name }}
+      </a>
+      {{ if .HasChildren }}
+        <ul>
+          {{ range .Children }}
+            <li><a href="{{ .URL }}">{{ .Name }}</a></li>
+          {{ end }}
+        </ul>
       {{ end }}
-    {{ end }}
-  </ul>
+    </li>
+  {{ end }}
+</ul>
 </nav>
