--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -11,22 +11,27 @@
     <div class="line"></div>
   </div>
 
-  <ul class="nav-links">
 
-  {{ range .Site.Menus.main }}
-    <li>
-      <a href="{{ .URL }}" title="{{ .Name }}">
-        {{ if .Pre }}{{ .Pre | safeHTML }}{{ end }}
-        {{ .Name }}
-      </a>
-      {{ if .HasChildren }}
-        <ul>
-          {{ range .Children }}
-            <li><a href="{{ .URL }}">{{ .Name }}</a></li>
-          {{ end }}
-        </ul>
-      {{ end }}
-    </li>
-  {{ end }}
-</ul>
+  <ul class="menu">
+    {{ $currentPage := . }}
+    {{ range .Site.Menus.main }}
+      <li class="menu-item {{ if .HasChildren }}has-dropdown{{ end }}">
+        <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }}">
+          {{ if .Pre }}{{ .Pre | safeHTML }}{{ end }}
+          {{ .Name }}
+        </a>
+        {{ if .HasChildren }}
+          <ul class="submenu">
+            {{ range .Children }}
+              <li>
+                <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }}">
+                  {{ .Name }}
+                </a>
+              </li>
+            {{ end }}
+          </ul>
+        {{ end }}
+      </li>
+    {{ end }}
+  </ul>
 </nav>
