--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -24,6 +24,7 @@
       {{ else }} <!-- If there are submenus -->
         <li class="dropdown">
           <a href="{{ .URL }}" class="{{ if eq $currentPage.RelPermalink .URL }}active{{ end }}">
+            {{ with .Pre }}{{ . | safeHTML }}{{ end }}
             {{ .Name }}
           </a>
           <ul class="dropdown-menu">
