--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,9 +1,17 @@
 <nav class="navbar">
+
+<!--
   <div class="logo">
     <a href="https://eens.netlify.app">
       <img src="/images/logo.svg" alt="Extra Ecclesia Nulla Salus">
     </a>
   </div>
+-->
+
+<div class="logo">
+    <span class="tau">Τ</span>
+    <span class="phrase">Extra Ecclesiam Nulla Salus</span>
+</div>
 
   <div class="hamburger">
     <div class="line"></div>
