--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,8 +1,10 @@
+<h1>&tau; Extra Ecclesiam Nulla Salus</h1>
+
 <nav class="navbar">
 
   <div class="logo">
     <a href="https://eens.netlify.app">
-      <img src="/images/logo.svg" alt="Extra Ecclesia Nulla Salus">
+      <img src="/images/logo.svg" alt="Extra Ecclesiam Nulla Salus">
     </a>
   </div>
 
