--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  background-color: #121212; /* Dark background */
   color: #ddd;
 }
 
@@ -17,6 +16,7 @@
   display: flex;
   list-style: none;
   margin-top: 20px;
+padding-left: 0px;
 }
 
 .nav-links li {
@@ -28,7 +28,7 @@
   color: #ddd;
   text-decoration: none;
   font-size: 1.1rem;
-  padding: 10px 0; /* Uniform padding for menu items */
+  padding: 7px 0; /* Uniform padding for menu items */
   display: block;
   width: 100%;
   transition: color 0.3s ease-in-out;
@@ -53,7 +53,6 @@
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: rgb(40, 40, 40); /* Darker for dropdown */
   list-style: none;
   padding: 0; /* Remove unnecessary padding */
   z-index: 1000;
@@ -66,7 +65,7 @@
 .dropdown-menu a {
   color: #ddd;
   text-decoration: none;
-  padding: 10px 0; /* Uniform padding for submenu items */
+  padding: 7px 0; /* Uniform padding for submenu items */
   padding-left: 20px; /* Subtle indent for submenu */
   transition: color 0.3s ease-in-out;
 }
