--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,11 +1,12 @@
-
 /* General Styles */
 .navbar {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
   color: #ddd;
+}
+.navbar h1 {
+   margin: 0px;
 }
 
 .logo img {
