--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -56,7 +56,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: transparent; /* No background color */
+  background-color: rgb(20,20,20);
   list-style: none;
   padding: 10px 0; /* Refined padding */
   z-index: 1000;
