--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -9,6 +9,9 @@
 .navbar h1 {
    margin: 10px;
 }
+.navbar h1:hover {
+   underline: none;
+}
 
 .logo img {
   width: 150px; /* Adjust the logo size */
