--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -3,7 +3,7 @@
 
 <h1>
 <a href="https://eens.netlify.app">
-(&Tau;) Extra Ecclesiam Nulla Salus
+(&tau;) Extra Ecclesiam Nulla Salus
 </a>
 </h1>
 
