--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,6 +1,8 @@
 
 <nav class="navbar">
 
+<img src="/images/banner.png"/>
+
 <h1>
 <a href="https://eens.netlify.app">
 (&tau;) Extra Ecclesiam Nulla Salus
