--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -12,7 +12,7 @@
   <h2>Featured Posts</h2>
   <div class="posts-grid">
     {{- range $featuredPosts }}
-      {{- $post := .Site.GetPage .url -}} <!-- Fetch post by URL -->
+      {{- $post := .Site.GetPage . -}} <!-- Fetch the page directly with URL -->
       {{- if $post -}}
         <div class="post-card">
           {{ with $post.Params.image }}
