--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -5,6 +5,22 @@
 {{ partial "latestblog.html" . }}
 -->
 
+
+<div class="home">
+  <h2>Latest Blog Posts</h2>
+  <div class="post-grid">
+    {{ range first 10 (where .Site.RegularPages "Section" "blog") }}
+      <div class="post-card">
+        <a href="{{ .Permalink }}">
+          {{ $image := .Params.image | default "/images/news.webp" }}
+          <img src="{{ $image }}" alt="{{ .Title }}">
+          <h3>{{ .Title }}</h3>
+        </a>
+      </div>
+    {{ end }}
+  </div>
+</div>
+
 <div class="content">
 <article>
 {{ .Content }}
