--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -5,43 +5,49 @@
 {{ partial "latestblog.html" . }}
 -->
 
+
+
 <div class="home">
-
-  <!-- Featured Posts Section -->
-  <section class="featured-posts">
-    <div class="post-grid">
-      {{ range .Site.Params.featuredPosts }}
-        {{ with $.Site.GetPage . }}
-          <div class="post-card featured">
-            <a href="{{ .Permalink }}">
-              {{ $image := .Params.image | default "/images/news.webp" }}
-              <img src="{{ $image }}" alt="{{ .Title }}">
-              <h3>{{ .Title }}</h3>
-            </a>
-          </div>
-        {{ end }}
-      {{ end }}
-    </div>
-  </section>
-
-
   <!-- Latest Blog Posts Section -->
-  <section class="latest-posts">
-    <h2>Latest Blog Posts</h2>
-    <div class="post-grid">
+  <section class="blog-section latest-posts">
+    <h2>Latest Posts</h2>
+    <div class="post-list">
       {{ range first 10 (where .Site.RegularPages "Section" "blog") }}
-        <div class="post-card">
+        <div class="post-item">
           <a href="{{ .Permalink }}">
             {{ $image := .Params.image | default "/images/news.webp" }}
             <img src="{{ $image }}" alt="{{ .Title }}">
-            <h3>{{ .Title }}</h3>
+            <span class="post-title">{{ .Title }}</span>
           </a>
         </div>
       {{ end }}
     </div>
   </section>
 
+  <!-- Featured Posts Section -->
+  <section class="blog-section featured-posts">
+    <h2>Featured Posts</h2>
+    <div class="post-list">
+      {{ range .Site.Params.featuredPosts }}
+        {{ with $.Site.GetPage . }}
+          <div class="post-item featured">
+            <a href="{{ .Permalink }}">
+              {{ $image := .Params.image | default "/images/news.webp" }}
+              <img src="{{ $image }}" alt="{{ .Title }}">
+              <span class="post-title">{{ .Title }}</span>
+            </a>
+          </div>
+        {{ end }}
+      {{ end }}
+    </div>
+  </section>
 </div>
+
+
+
+
+
+
 
 <div class="content">
 <article>
