--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -11,6 +11,7 @@
 
   <!-- Featured Posts Section -->
   <section class="blog-section featured-posts">
+    <h2>{{ i18n "sections" }}</h2>
     <div class="post-list">
       {{ range .Site.Params.featuredPosts }}
         {{ with $.Site.GetPage . }}
@@ -28,7 +29,7 @@
 
   <!-- Latest Blog Posts Section -->
   <section class="blog-section latest-posts">
-    <h2>Blog</h2>
+    <h2>{{ i18n "news" }}</h2>
     <div class="post-list">
       {{ range first 10 (where .Site.RegularPages "Section" "blog") }}
         <div class="post-item">
